--- a/inphms/addons/base/views/ir_profile_views.xml
+++ b/inphms/addons/base/views/ir_profile_views.xml
@@ -39,19 +39,34 @@
         <field name="model">ir.profile</field>
         <field name="arch" type="xml">
             <form string="IR Profile">
-                <group>
+                <div>
+                    <group string="Information" class="border rounded mb-4 i__group">
+                        <field name="name"/>
+                        <field name="session"/>
+                        <field name="cpu_duration"/>
+                        <field name="entry_count"/>
+                        <!-- Do not rely on sql field for the invisible attrs to avoid fetching whole trace from server. -->
+                        <field name="sql_count" invisible="sql_count == 0"/>
+                        <field name="speedscope_url" widget="url"/>
+                        <field name="config_url" widget="url"/>
+                    </group>
+                    <group string="Qweb" invisible="not qweb" class="border rounded mb-4 i__group">
+                        <field colspan="2" name="qweb" widget="profiling_qweb_view" nolabel="1"/>
+                    </group>
+                </div>
+                <!-- <group>
                     <field name="name"/>
                     <field name="session"/>
                     <field name="cpu_duration"/>
                     <field name="entry_count"/>
-                    <!-- Do not rely on sql field for the invisible attrs to avoid fetching whole trace from server. -->
+                    Do not rely on sql field for the invisible attrs to avoid fetching whole trace from server.
                     <field name="sql_count" invisible="sql_count == 0"/>
                     <field name="speedscope_url" widget="url"/>
                     <field name="config_url" widget="url"/>
                 </group>
                 <group invisible="not qweb">
                     <field name="qweb" widget="profiling_qweb_view" nolabel="1"/>
-                </group>
+                </group> -->
             </form>
         </field>
     </record>
