--- a/inphms/addons/base/views/ir_ui_menu_views.xml
+++ b/inphms/addons/base/views/ir_ui_menu_views.xml
@@ -5,7 +5,34 @@
             <field name="arch" type="xml">
                 <form string="Menu">
                     <sheet>
-                        <group>
+                        <div>
+                            <group string="Definition" class="border rounded mb-4 mx-0 i__group">
+                                <group>
+                                    <field name="name"/>
+                                    <field name="parent_id" groups="base.group_no_one"/>
+                                    <field name="sequence" groups="base.group_no_one"/>
+                                    <field name="group_ids" string="Visibility" widget="many2many_tags"/>
+                                </group>
+                                <group groups="base.group_no_one">
+                                    <field name="complete_name"/>
+                                    <field name="action"/>
+                                    <field name="web_icon"/>
+                                    <field name="web_icon_data"/>
+                                    <field name="submenu_icon"/>
+                                </group>
+                            </group>
+                            <group string="Submenus" name="submenus" groups="base.group_no_one" class="border rounded mb-4 i__group">
+                                <!-- Note: make sure you have 'ir.ui.menu.full_list'
+                                    in the context to see all submenus! -->
+                                <field name="child_id" context="{'default_parent_id': id}">
+                                    <list string="Menu">
+                                        <field name="sequence"/>
+                                        <field icon="icon" name="name" string="Menu"/>
+                                    </list>
+                                </field>
+                            </group>
+                        </div>
+                        <!-- <group>
                             <group>
                                 <field name="name"/>
                                 <field name="parent_id" groups="base.group_no_one"/>
@@ -22,8 +49,8 @@
                         </group>
                         <notebook>
                             <page string="Submenus" name="submenus" groups="base.group_no_one">
-                                <!-- Note: make sure you have 'ir.ui.menu.full_list'
-                                    in the context to see all submenus! -->
+                                Note: make sure you have 'ir.ui.menu.full_list'
+                                    in the context to see all submenus!
                                 <field name="child_id" context="{'default_parent_id': id}">
                                     <list string="Menu">
                                         <field name="sequence"/>
@@ -31,7 +58,7 @@
                                     </list>
                                 </field>
                             </page>
-                        </notebook>
+                        </notebook> -->
                    </sheet>
                 </form>
             </field>
