--- a/inphms/addons/base/views/ir_ui_view_views.xml
+++ b/inphms/addons/base/views/ir_ui_view_views.xml
@@ -5,53 +5,106 @@
             <field name="model">ir.ui.view</field>
             <field name="arch" type="xml">
                 <form string="Views">
-                  <sheet>
-                    <group>
-                        <group>
-                            <field name="name"/>
-                            <field name="type"/>
-                            <field name="model_id"/>
-                            <field name="priority"/>
-                            <field name="active" widget="boolean_toggle"/>
-                        </group>
-                        <group groups="base.group_no_one">
-                            <field name="inherit_id"/>
-                            <field name="mode"/>
-                            <field name="model_data_id"/>
-                            <field name="xml_id" class="text-break"/>
-                        </group>
-                    </group>
-                    <div class="oe_edit_only alert alert-info" role="alert">
-                        <strong>Heads up:</strong> Editing a standard view directly isn’t recommended.<br></br>
-                        Your changes may be overwritten during future updates.<br/>
-                        For safe, upgrade-proof customization, use <strong>inherited views</strong> or <strong>Inphms Studio.</strong>
-                    </div>
-                    <div class="alert alert-warning" role="alert" invisible="not warning_info">
-                        <field name="warning_info"/>
-                    </div>
-                    <notebook>
-                        <page string="Architecture" name="architecture">
-                            <field name="arch_db" class="oe_edit_only oe_no_translation_content"/>
-                            <field name="arch_base" string="View Architecture" widget="code" options="{'mode': 'xml'}" required="1"/>
-                        </page>
-                        <page string="Access Rights" name="access_rights">
-                            <field name="group_ids"/>
-                        </page>
-                        <page name="inherit_children" string="Inherited Views">
-                            <field name="inherit_children_ids" context="{'default_model':model,'default_type':type,'default_inherit_id':id,'default_mode':'extension', 'active_test': False}">
-                                <list default_order="priority,id" decoration-muted="not active">
-                                    <field name="id"/>
-                                    <field name="priority"/>
+                    <sheet>
+                        <div>
+                            <group string="Definition" class="border rounded mb-4 mx-0 i__group">
+                                <group>
                                     <field name="name"/>
-                                    <field name="xml_id"/>
-                                    <field name="active" invisible="1" />
-                                    <!-- Manually add active here. Otherwise that field will be readonly for the sub-list,
-                                    preventing saving changes done from a widget in the sub-form -->
-                                </list>
-                            </field>
-                        </page>
-                    </notebook>
-                  </sheet>
+                                    <field name="type"/>
+                                    <field name="model_id"/>
+                                    <field name="priority"/>
+                                    <field name="active" widget="boolean_toggle"/>
+                                </group>
+                                <group groups="base.group_no_one">
+                                    <field name="inherit_id"/>
+                                    <field name="mode"/>
+                                    <field name="model_data_id"/>
+                                    <field name="xml_id" class="text-break"/>
+                                </group>
+                            </group>
+                            <group string="Access Rights" name="access_rights" class="border rounded mb-4 i__group">
+                                <field name="group_ids"/>
+                            </group>
+                            <group name="inherit_children" string="Inherited Views" class="border rounded mb-4 i__group">
+                                <field name="inherit_children_ids" context="{'default_model':model,'default_type':type,'default_inherit_id':id,'default_mode':'extension', 'active_test': False}">
+                                    <list default_order="priority,id" decoration-muted="not active">
+                                        <field name="id"/>
+                                        <field name="priority"/>
+                                        <field name="name"/>
+                                        <field name="xml_id"/>
+                                        <field name="active" invisible="1"/>
+                                        <!-- Manually add active here. Otherwise that field will be readonly for the sub-list,
+                                        preventing saving changes done from a widget in the sub-form -->
+                                    </list>
+                                </field>
+                            </group>
+                            <group name="architecture" string="Architecture" class="border rounded mb-4 mx-0 i__group">
+                                <group colspan="2">
+                                    <field name="arch_db" nolabel="1" class="oe_edit_only oe_no_translation_content"/>
+                                    <field name="arch_base" nolabel="1" string="View Architecture" widget="code" options="{'mode': 'xml'}" required="1"/>
+                                </group>
+                            </group>
+                        </div>
+                        <sidepanel>
+                            <group string="Status" class="border rounded mb-4 i__group">
+                                <div class="oe_edit_only alert alert-info" role="alert" colspan="2">
+                                    <strong>Heads up:</strong> Editing a standard view directly isn’t recommended.<br/>
+                                    Your changes may be overwritten during future updates.<br/>
+                                    For safe, upgrade-proof customization, use <strong>inherited views</strong> or <strong>Inphms Studio.</strong>
+                                </div>
+                                <div class="alert alert-warning" role="alert" invisible="not warning_info">
+                                    <field name="warning_info"/>
+                                </div>
+                                <field name="create_date" widget="date" options="{'show_time': false}" readonly="1" class="fw-bold"/>
+                                <field name="write_date" readonly="1" class="fw-bold"/>
+                            </group>
+                        </sidepanel>
+                        <!-- <group>
+                            <group>
+                                <field name="name"/>
+                                <field name="type"/>
+                                <field name="model_id"/>
+                                <field name="priority"/>
+                                <field name="active" widget="boolean_toggle"/>
+                            </group>
+                            <group groups="base.group_no_one">
+                                <field name="inherit_id"/>
+                                <field name="mode"/>
+                                <field name="model_data_id"/>
+                                <field name="xml_id" class="text-break"/>
+                            </group>
+                        </group>
+                        <div class="oe_edit_only alert alert-info" role="alert">
+                            <strong>Heads up:</strong> Editing a standard view directly isn’t recommended.<br></br>
+                            Your changes may be overwritten during future updates.<br/>
+                            For safe, upgrade-proof customization, use <strong>inherited views</strong> or <strong>Inphms Studio.</strong>
+                        </div>
+                        <div class="alert alert-warning" role="alert" invisible="not warning_info">
+                            <field name="warning_info"/>
+                        </div>
+                        <notebook>
+                            <page string="Architecture" name="architecture">
+                                <field name="arch_db" class="oe_edit_only oe_no_translation_content"/>
+                                <field name="arch_base" string="View Architecture" widget="code" options="{'mode': 'xml'}" required="1"/>
+                            </page>
+                            <page string="Access Rights" name="access_rights">
+                                <field name="group_ids"/>
+                            </page>
+                            <page name="inherit_children" string="Inherited Views">
+                                <field name="inherit_children_ids" context="{'default_model':model,'default_type':type,'default_inherit_id':id,'default_mode':'extension', 'active_test': False}">
+                                    <list default_order="priority,id" decoration-muted="not active">
+                                        <field name="id"/>
+                                        <field name="priority"/>
+                                        <field name="name"/>
+                                        <field name="xml_id"/>
+                                        <field name="active" invisible="1" />
+                                        Manually add active here. Otherwise that field will be readonly for the sub-list,
+                                        preventing saving changes done from a widget in the sub-form
+                                    </list>
+                                </field>
+                            </page>
+                        </notebook> -->
+                    </sheet>
                 </form>
             </field>
         </record>
@@ -155,12 +208,21 @@
             <field name="arch" type="xml">
                 <form string="Customized Views">
                   <sheet>
-                    <group col="4">
+                    <div>
+                        <group string="Definition" class="border rounded i__group mb-4">
+                            <field name="user_id"/>
+                            <field name="ref_id"/>
+                        </group>
+                        <group string="View Architecture" class="border rounded i__group mb-4">
+                            <field name="arch" colspan="4" nolabel="1"/>
+                        </group>
+                    </div>
+                    <!-- <group col="4">
                         <field name="user_id"/>
                         <field name="ref_id"/>
                         <separator string="View Architecture" colspan="4" />
                         <field name="arch" colspan="4" nolabel="1"/>
-                    </group>
+                    </group> -->
                    </sheet>
                 </form>
             </field>
