--- a/inphms/addons/base/views/res_currency_views.xml
+++ b/inphms/addons/base/views/res_currency_views.xml
@@ -32,7 +32,7 @@
             <field name="arch" type="xml">
                 <form string="Currency Rate">
                     <sheet>
-                        <group>
+                        <group string="Definition" class="i__group rounded mb-4 mx-0 border">
                             <group>
                                 <field name="name"/>
                                 <field name="rate" digits="[12,12]" groups="base.group_no_one"/>
@@ -135,7 +135,38 @@
                         This is your company's currency.
                     </div>
                     <sheet>
-                        <group>
+                        <div>
+                            <group string="Defintion" class="border rounded mx-0 mb-4 i__group">
+                                <group>
+                                    <field name="name"/>
+                                    <field name="full_name" string="Name"/>
+                                    <field name="active" widget="boolean_toggle"/>
+                                </group>
+                                <group>
+                                    <field name="symbol"/>
+                                    <field name="currency_unit_label"/>
+                                    <field name="currency_subunit_label"/>
+                                    <field name="position"/>
+                                </group>
+                            </group>
+                            <group string="Price Accuracy" groups="base.group_no_one" class="border rounded mb-4 i__group">
+                                <field name="rounding"/>
+                                <field name="decimal_places"/>
+                            </group>
+                            <group string="Rates" class="border rounded mb-4 i__group" invisible="is_current_company_currency">
+                                <field name="rate_ids" widget="one2many">
+                                    <list string="Rates" editable="top" limit="25">
+                                        <field name="name"/>
+                                        <field name="company_id" groups="base.group_multi_company" placeholder="Visible to all"/>
+                                        <field name="company_rate" digits="[12,12]"/>
+                                        <field name="inverse_company_rate" digits="[12,12]"/>
+                                        <field name="rate" digits="[12,12]" optional="hide"/>
+                                        <field name="write_date" optional="hide"/>
+                                    </list>
+                                </field>
+                            </group>
+                        </div>
+                        <!-- <group>
                             <group>
                                 <field name="name"/>
                                 <field name="full_name" string="Name"/>
@@ -168,7 +199,7 @@
                                     </list>
                                 </field>
                             </page>
-                        </notebook>
+                        </notebook> -->
                     </sheet>
                 </form>
             </field>
