--- a/inphms/addons/base/views/res_device_views.xml
+++ b/inphms/addons/base/views/res_device_views.xml
@@ -7,7 +7,7 @@
             <field name="model">res.device</field>
             <field name="arch" type="xml">
                 <form>
-                    <group>
+                    <group class="i_group">
                         <group>
                             <field name="user_id"/>
                             <field name="display_name" string="Name"/>
