--- a/inphms/addons/base/views/ir_filters_views.xml
+++ b/inphms/addons/base/views/ir_filters_views.xml
@@ -10,7 +10,29 @@
                         <div class="ribbon ribbon-top-right" invisible="active">
                             <span class="text-bg-primary">Archived</span>
                         </div>
-                        <group>
+                        <div>
+                            <group string="Definition" class="rounded border mb-4 mx-0 i__group">
+                                <group>
+                                    <field name="name"/>
+                                    <field name="user_ids" string="Shared with" widget="many2many_tags_avatar" placeholder="All users"/>
+                                    <field name="is_default" widget="boolean_toggle"/>
+                                </group>
+                                <group class="mt-3 mt-lg-0">
+                                    <field name="model_id" groups="base.group_no_one"/>
+                                    <field name="action_id" groups="base.group_no_one"/>
+                                </group>
+                            </group>
+                            <group string="Behaviour" class="rounded border mb-4 mx-0 i__group">
+                                <group>
+                                    <field name="domain" widget="domain" options="{'foldable': True, 'model': 'model_id', 'allow_expressions':True}"/>
+                                </group>
+                                <group>
+                                    <field name="context" groups="base.group_no_one"/>
+                                    <field name="sort" groups="base.group_no_one"/>
+                                </group>
+                            </group>
+                        </div>
+                        <!-- <group>
                             <group>
                                 <field name="name"/>
                                 <field name="user_ids" string="Shared with" widget="many2many_tags_avatar" placeholder="All users"/>
@@ -23,7 +45,7 @@
                                 <field name="context" groups="base.group_no_one"/>
                                 <field name="sort" groups="base.group_no_one"/>
                             </group>
-                        </group>
+                        </group> -->
                     </sheet>
                 </form>
             </field>
