[Update] Form view archInfo6

--- a/addons/web/static/src/scss/primary_variables.scss
+++ b/addons/web/static/src/scss/primary_variables.scss
@@ -108,8 +108,8 @@ $i-action-transition: all $i-action-transition-duration $i-action-transition-tim
 
 // $o-action: $o-brand-primary !default;
 $o-action: $o-enterprise-action-color !default;
-// $o-success: #28a745 !default;
-$o-success: hsl(146, 41%, 48%) !default;
+$o-success: #28a745 !default;
+// $o-success: hsl(146, 41%, 48%) !default;
 $o-info: #17a2b8 !default;
 $o-warning: #ffac00 !default;
 $o-danger: #dc3545 !default;
