--- a/inphms/addons/base/views/base_menus.xml
+++ b/inphms/addons/base/views/base_menus.xml
@@ -67,7 +67,13 @@
         <field name="help">Employees, users, access</field>
     </record>
     <!-- TODO: add group -->
-    <menuitem id="menu_people_root" name="People" sequence="10" action="ir_action_people_views">
+    <menuitem 
+        id="menu_people_root" 
+        name="People"
+        sequence="10"
+        action="ir_action_people_views"
+        web_icon="base,static/description/people.png"
+    >
         <menuitem id="menu_people_people_views" name="Directory" sequence="0"/>
         <menuitem id="menu_people_administrator" name="Administrations" sequence="100"/>
     </menuitem>
