--- a/addons/web/static/src/scss/bs_mixins_overrides_backend.scss
+++ b/addons/web/static/src/scss/bs_mixins_overrides_backend.scss
@@ -31,3 +31,45 @@
         }
     }
 }
+
+// Customize Bootsrap 'button-variant' mixin,
+// Making disabled colors fine-tuned to our ones.
+@mixin button-variant(
+  $background,
+  $border,
+  $color: color-contrast($background),
+  $hover-background: if($color == $color-contrast-light, shade-color($background, $btn-hover-bg-shade-amount), tint-color($background, $btn-hover-bg-tint-amount)),
+  $hover-border: if($color == $color-contrast-light, shade-color($border, $btn-hover-border-shade-amount), tint-color($border, $btn-hover-border-tint-amount)),
+  $hover-color: color-contrast($hover-background),
+  $active-background: if($color == $color-contrast-light, shade-color($background, $btn-active-bg-shade-amount), tint-color($background, $btn-active-bg-tint-amount)),
+  $active-border: if($color == $color-contrast-light, shade-color($border, $btn-active-border-shade-amount), tint-color($border, $btn-active-border-tint-amount)),
+  $active-color: color-contrast($active-background),
+  $disabled-background: $background,
+  $disabled-border: $border,
+  $disabled-color: color-contrast($disabled-background)
+) {
+  --#{$prefix}btn-color: #{$color};
+  --#{$prefix}btn-bg: #{$background};
+  --#{$prefix}btn-border-color: #{$border};
+  --#{$prefix}btn-hover-color: #{$hover-color};
+  --#{$prefix}btn-hover-bg: #{$hover-background};
+  --#{$prefix}btn-hover-border-color: #{$hover-border};
+  --#{$prefix}btn-focus-shadow-rgb: #{to-rgb(mix($color, $border, 15%))};
+  --#{$prefix}btn-active-color: #{$active-color};
+  --#{$prefix}btn-active-bg: #{$active-background};
+  --#{$prefix}btn-active-border-color: #{$active-border};
+  --#{$prefix}btn-active-shadow: #{$btn-active-box-shadow};
+  
+  // If lightness is too light or too dark,
+  // we'll use default disabled colors to ensure minimum contrast.
+  @if lightness($background) > 90% or lightness($background) < 10% {
+    // Bootstrap default
+    --#{$prefix}btn-disabled-color: #{$disabled-color};
+    --#{$prefix}btn-disabled-bg: #{$disabled-background};
+    --#{$prefix}btn-disabled-border-color: #{$disabled-border};
+  } @else {
+    --#{$prefix}btn-disabled-color: #{$disabled-background};  
+    --#{$prefix}btn-disabled-bg: RGBA(#{to-rgb($disabled-background)}, .1);
+    --#{$prefix}btn-disabled-border-color: RGBA(#{to-rgb($disabled-border)}, .1);
+  }
+}
