--- a/inphms/addons/base/views/ir_cron_views.xml
+++ b/inphms/addons/base/views/ir_cron_views.xml
@@ -16,7 +16,7 @@
                 </xpath>
                 <xpath expr="//button[@name='history_wizard_action']" position="replace"/>
                 <xpath expr="//notebook" position="before">
-                    <group>
+                    <group colspan="2">
                         <group>
                             <field name="user_id"/>
                             <label for="interval_number" string="Execute Every"/>
@@ -25,14 +25,20 @@
                                 <field name="interval_type" class="oe_inline"/>
                             </div>
                             <field name="active" widget="boolean_toggle"/>
+                        </group>
+                        <group>
                             <field name="nextcall"/>
                             <field name="priority"/>
                         </group>
                     </group>
                 </xpath>
+                <!--Should the field also be invisible?-->
                 <field name="state" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </field>
+                <group name="state_wrapper" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </group>
             </field>
         </record>
 
