--- a/inphms/addons/base/wizard/base_module_upgrade_views.xml
+++ b/inphms/addons/base/wizard/base_module_upgrade_views.xml
@@ -27,13 +27,13 @@
             <field name="target">new</field>
         </record>
 
-        <menuitem
+        <!-- <menuitem
            name="Run Pending Upgrades"
            action="action_view_base_module_upgrade"
            groups="base.group_no_one"
            id="menu_view_base_module_upgrade"
            parent="menu_management"
-           sequence="50"/>
+           sequence="50"/> -->
 
        <record id="view_base_module_upgrade_install" model="ir.ui.view">
             <field name="name">Module Upgrade Install</field>
